deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zknot3
  labels:
    name: zknot3
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
